# mcp-ui

./: CHANGES_SUMMARY.md  README.md  SECURITY.md  VERIFICATION_REPORT.md  mcp-ui-implementation-guide.md  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: package.json
docs/src/: index.md
docs/src/.vitepress/: config.ts
docs/src/.vitepress/theme/: custom.css
docs/src/guide/: embeddable-ui.md  introduction.md  supported-hosts.md
docs/src/guide/client/: html-resource.md  overview.md  react-usage-examples.md  resource-renderer.md
docs/src/guide/server/python/: overview.md  usage-examples.md  walkthrough.md
docs/src/guide/server/typescript/: overview.md  usage-examples.md
examples/python-server-demo/: README.md  pyproject.toml  python_server_demo.py
sdks/python/server/: README.md  pyproject.toml
sdks/python/server/src/mcp_ui_server/: __init__.py  core.py  exceptions.py  types.py  utils.py
sdks/python/server/tests/: __init__.py  test_create_ui_resource.py  test_ui_action_results.py
sdks/typescript/client/: CHANGELOG.md  README.md  package.json
sdks/typescript/client/src/: index.ts  types.ts
sdks/typescript/client/src/components/: HTMLResourceRenderer.tsx  UIResourceRenderer.tsx
sdks/typescript/client/src/components/__tests__/: HTMLResourceRenderer.test.tsx  UIResourceRenderer.unmocked.test.tsx
sdks/typescript/client/src/utils/: isUIResource.ts  metadataUtils.ts
sdks/typescript/client/src/utils/__tests__/: isUIResource.test.ts  metadataUtils.test.ts  processResource.test.ts
sdks/typescript/server/: CHANGELOG.md  package.json
sdks/typescript/server/src/: index.ts  types.ts  utils.ts
sdks/typescript/server/src/__tests__/: index.test.ts  utils.test.ts
