[project]
name = "python-server-demo"
version = "0.1.0"
description = "Python MCP server demo inspired by the TypeScript version"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "mcp-ui-server",
]
authors = [
    {name = "MCP UI Contributors"}
]
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://mcpui.dev"
Repository = "https://github.com/idosal/mcp-ui"
Documentation = "https://mcpui.dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0"
]

[tool.uv.sources]
mcp-ui-server = { path = "../../sdks/python/server" }

[project.scripts]
python-server-demo = "python_server_demo:main"
